cmake_minimum_required(VERSION 3.0)
project(AlgorithmPractice)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(MaximumSubarray)
# exam training
add_subdirectory(day1/WordAppearanceNumber)
add_subdirectory(day1/ComplexCompound)
add_subdirectory(day2/ElectronicMicroscope)
add_subdirectory(day2/LCS)
add_subdirectory(day4/VideoEncoding)
add_subdirectory(day5/FilesystemImplementation)
add_subdirectory(day6/TextEditor)

