cmake_minimum_required(VERSION 3.0)
project(AlgorithmPractice)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(MaximumSubarray)
# exam training
add_subdirectory(day1/WordAppearanceNumber)
add_subdirectory(day1/ComplexCompound)
add_subdirectory(day2/ElectronicMicroscope)
add_subdirectory(day2/LCS)
add_subdirectory(day4/VideoEncoding)
add_subdirectory(day5/VirusInfection)
add_subdirectory(day6/TextEditor)
add_subdirectory(day7/IoTMessage)
add_subdirectory(day8/GalaxyColumns)

add_subdirectory(20171125-AccountOperation)
add_subdirectory(20171202-SamRoute)
add_subdirectory(20180324-AccurateCalculator)
add_subdirectory(20180310-MapCompletion)
add_subdirectory(20180407-SearchEngine)
add_subdirectory(20180428-GMemo)
add_subdirectory(20180512-BlockChain)
add_subdirectory(20170512-DiskScheduling)

